--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 * {
-  font-family: 'Roboto' sans-serif;
+  font-family: "Roboto" sans-serif;
+}
+
+header {
+  position: relative;
 }
 
 nav {
@@ -27,6 +31,8 @@ nav {
 }
 
 .subheader {
+  position: absolute;
+  width: 100%;
   height: 84px;
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -74,6 +80,57 @@ nav {
   background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
   color: #ffffff;
   font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.promo {
+  min-width: 800px;
+  background: url(../icons/uber_bg.png) center center/cover no-repeat;
+  padding: 150px 0 135px 0;
+}
+
+.promo .promo_header {
+  color: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 60px;
+  line-height: 60px;
+  margin: 0;
+  text-align: center;
+}
+
+.promo .promo_subheader {
+  color: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 36px;
+  line-height: 36px;
+  margin: 0;
+  margin-top: 22px;
+  text-align: center;
+}
+
+.promo .promo_descr {
+  color: #ffffff;
+  font-weight: 400;
+  text-align: center;
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 23px;
+}
+
+.promo .promo_btn {
+  display: block;
+  margin: 118px auto 0 auto;
+  width: 259px;
+  height: 63px;
+  box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
+  border: none;
+  border-radius: 4px;
+  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
+  color: #ffffff;
+  font-size: 18px;
   font-weight: 400;
   text-transform: uppercase;
 }
